rules/dangling-networkpolicy/test/success_matches_matchexpressions_doesnotexist/input/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: exp-doesnotexist-policy
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: tier
      operator: DoesNotExist
  policyTypes:
  - Ingress
