rules/dangling-networkpolicy/test/success_matches_matchexpressions_doesnotexist/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-tier-pod
  namespace: default
  labels:
    app: web
spec:
  containers:
  - name: app
    image: nginx:latest
